crates/rstest-bdd-macros/tests/fixtures/step_struct_pattern.stderr
error: invalid step function signature: unsupported parameter pattern; use a simple identifier (e.g., `arg: T`)
  --> tests/fixtures/step_struct_pattern.rs:11:21
   |
11 | fn step_with_struct(User { name }: User) {}
   |                     ^^^^^^^^^^^^^
   |
   = help: use `#[given] fn name(ctx: &rstest_bdd::StepContext, ...)` and valid fixtures
